--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 
+<!-- Viewport -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
+
+  <!-- CSS Breakpoints -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" media="screen and (max-width:599px)" href="css/styles600.css">
   <link rel="stylesheet" media="screen and (min-width:600px) and (max-width:899px)" href="css/styles900.css">
+  <link rel="stylesheet" media="screen and (min-width:901px)" href="css/stylesLarge.css">
+
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <title>Restaurant Reviews</title>
 </head>
