--- a/restaurant.html
+++ b/restaurant.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 
+<!-- Viewport -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+
+  <!-- CSS Breakpoints -->
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <link rel="stylesheet" media="screen and (max-width:599px)" href="css/styles600.css">
+  <link rel="stylesheet" media="screen and (min-width:600px) and (max-width:899px)" href="css/styles900.css">
+  <link rel="stylesheet" media="screen and (min-width:901px)" href="css/stylesLarge.css">
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <title>Restaurant Info</title>
 </head>
@@ -15,7 +23,7 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1 id="header"><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
