--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <!-- Viewport -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,21 +22,21 @@
 
   <header>
     <nav>
-      <h1 id="header"><a href="/">Restaurant Reviews</a></h1>
+      <h1 id="header"><a href="/" alt="Restaurant Reviews Home">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" tabindex="-1">
+      <div id="map" tabindex="-1"></div>
     </section>
     <section id="restaurantSelection">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Neighborhood Select">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Cuisine Select">
           <option value="all">All Cuisines</option>
         </select>
       </div>
