--- a/restaurant.html
+++ b/restaurant.html
@@ -54,7 +54,7 @@
 
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
     <!-- End map -->
 
